--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -36,14 +36,23 @@ A new  preventative aides drug (triUmpsal) is under test in clinical trials. Con
 barchartGC(~infected + treatment ,data=females)
 barchartGC(~infected + treatment ,data=females, type="percent")
 ```
+Those with aids it seems the the drug was more effective and the placebo was not and If they didnt have it the placebo seemed more effective.
 ### Numerical Descriptive Results
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
-
+```{r}
+table1 <- xtabs(~infected + treatment, data=females)
+rowPerc(table1)
+colPerc(table1)
+```
 ## Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
-
+```{r}
+chisq.test(table1)
+chisqtestGC(table1)
+fisher.test(table1)
+```
 
 # Discussion and Conclusion
 
